# aclaw

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAW-ADOPTION-TODO.md  Cargo.toml  Dockerfile  FEATURES_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  OPENCLAW_INTEGRATIONS.md  OVERVIEW.md  PHASE_4_ROADMAP.md  PRODUCTION_RELEASE.md  README.md  SECURITY_AUDIT.md  SWARM-UPGRADE.md  SWARM.md  build.zig  build.zig.zon  container-config.json  deploy.sh  install.sh  package-lock.json  package.json  reminder_system.v  schedule.md  unthinkclaw.json  wrangler.jsonc
.github/workflows/: release.yml
deploy/: README.md  docker-compose.yml
deploy/fly/: fly.toml
deploy/kubernetes/: deployment.yaml  service.yaml
docs/: CLAW-ADOPTION-TODO.md  COMPUTER_USE.md  NATIVE_PLUGINS.md  PLUGIN_PACKAGES.md  README.md  ROADMAP.md  SWARM-UPGRADE.md  SWARM.md  TODO.md  schedule.md
plugins/: manifest.json
poke-sdk/: README.md  mcp-launcher.js  package.json  poke.js  register.js  start.js
scripts/: watch.sh
src/: agent_http.rs  bootstrap.rs  claw_adapter.rs  context.rs  cost.rs  cron_scheduler.rs  diagnostics.rs  embeddings.rs  heartbeat.rs  index.js  lib.rs  main.rs  main.zig  mcp.rs  mcp_server.rs  plugin.rs  policy.rs  prompt.rs  scheduler.rs  self_update.rs  skills.rs  telegram_runtime.rs  text.rs
src/agent/: hooks.rs  loop_runner.rs  mod.rs  mode.rs  stream.rs
src/channels/: cli.rs  discord.rs  formatting.rs  googlechat.rs  http_inject.rs  irc.rs  matrix.rs  mod.rs  msteams.rs  signal.rs  slack.rs  telegram.rs  traits.rs  whatsapp.rs
src/config/: mod.rs
src/gateway/: mod.rs  server.rs
src/hosted/: mod.rs
src/memory/: embeddings.rs  fastembed_local.rs  hnsw.rs  mod.rs  search.rs  sqlite.rs  surreal.rs  traits.rs
src/plugins/: host.rs  manifest.rs  mod.rs  poke.rs
src/providers/: anthropic.rs  copilot.rs  mod.rs  oauth.rs  ollama.rs  openai_compat.rs  retry.rs  traits.rs
src/runtime/: daytona.rs  docker.rs  mod.rs  native.rs  traits.rs
src/swarm/: agent_registry.rs  coordinator.rs  delegation.rs  evaluate.rs  handoff.rs  mod.rs  models.rs  scheduler.rs  storage.rs  task_queue.rs  team.rs
src/tools/: brief.rs  browser.rs  claude_usage.rs  coding_swarm.rs  composio.rs  computer_use.rs  config_tool.rs  cron_tool.rs  doctor.rs  dynamic.rs  edit.rs  embeddings.rs  file_ops.rs  git_operations.rs  http_request.rs  mcp.rs  message.rs  mod.rs  mode_switch.rs  network.rs  sandbox.rs  service.rs  session.rs  shell.rs  skill_manager.rs  sleep_tool.rs  todo_write.rs  tool_search.rs  toolsets.rs  traits.rs  tunnel.rs  vibemania.rs  web_fetch.rs  web_search.rs  worktree.rs
tests/: swarm_integration.rs
