[package]
name = "aclaw"
version = "0.1.0"
edition = "2024"
description = "Lightweight agent runtime — successor to OpenClaw. Best of ZeroClaw, NanoClaw, HiClaw."
license = "MIT"
repository = "https://github.com/undivisible/aclaw"

[[bin]]
name = "aclaw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client + server
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database (SQLite for memory/state)
rusqlite = { version = "0.30", features = ["bundled"] }

# Container management
bollard = "0.18"
shlex = "1.3"

# Environment
dotenv = "0.15"

# Crypto (for credential encryption)
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# WebSocket
tokio-tungstenite = "0.26"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # No unwind tables
