[package]
name = "unthinkclaw"
version = "0.2.0"
edition = "2021"
description = "Lightweight agent runtime — unthink everything."
license = "MIT"
repository = "https://github.com/undivisible/unthinkclaw"

[[bin]]
name = "unthinkclaw"
path = "src/main.rs"

[[bin]]
name = "unthinkclaw-install"
path = "src/bin/unthinkclaw_install.rs"

[features]
# Minimal core: CLI + local Ollama. Add `desktop` or `full` for v0.1-like builds.
default = ["core", "channel-cli", "provider-ollama"]

core = []

# Optional tool packs (plugin-tier)
plugin-web = []
plugin-browser = []
plugin-skills = []
plugin-advanced = []
plugin-poke = []

# Local ONNX embeddings (large dep — off by default)
plugin-fastembed = ["dep:fastembed"]

# Swarm coordination (plugin-tier; not in default)
plugin-swarm = []

# Channels
channel-cli = []
channel-telegram = []
channel-discord = []
channel-slack = []
channel-whatsapp = []
channel-signal = []
channel-matrix = []
channel-irc = []
channel-googlechat = []
channel-msteams = []

# Providers
provider-anthropic = []
provider-openai = []
provider-copilot = []
provider-ollama = []
provider-openrouter = []
provider-groq = []
provider-together = []
provider-mistral = []
provider-deepseek = []
provider-fireworks = []
provider-perplexity = []
provider-xai = []
provider-moonshot = []
provider-venice = []
provider-huggingface = []
provider-siliconflow = []
provider-cerebras = []
provider-minimax = []
provider-vercel = []
provider-cloudflare = []

docker = ["dep:bollard"]

# Back-compat: `swarm` enables plugin-swarm
swarm = ["plugin-swarm"]

# Typical laptop/desktop build (Telegram + Anthropic + tool plugins)
desktop = [
    "channel-telegram",
    "provider-anthropic",
    "plugin-web",
    "plugin-browser",
    "plugin-skills",
    "plugin-advanced",
]

all-channels = ["channel-cli", "channel-telegram", "channel-discord", "channel-slack", "channel-whatsapp", "channel-signal", "channel-matrix", "channel-irc", "channel-googlechat", "channel-msteams"]
all-providers = ["provider-anthropic", "provider-openai", "provider-copilot", "provider-ollama", "provider-openrouter", "provider-groq", "provider-together", "provider-mistral", "provider-deepseek", "provider-fireworks", "provider-perplexity", "provider-xai", "provider-moonshot", "provider-venice", "provider-huggingface", "provider-siliconflow", "provider-cerebras", "provider-minimax", "provider-vercel", "provider-cloudflare"]
all-plugins = ["plugin-web", "plugin-browser", "plugin-skills", "plugin-advanced", "plugin-poke", "plugin-swarm", "plugin-fastembed"]
full = ["all-channels", "all-providers", "all-plugins", "docker"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "signal", "process", "io-std"] }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
surrealdb = { version = "2.1", features = ["kv-rocksdb"] }
rocksdb = { version = "0.23" }
fastembed = { version = "4", optional = true }
bollard = { version = "0.18", optional = true }
shlex = "1.3"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
parking_lot = "0.12"
notify = { version = "6", features = ["serde"] }
cron = "0.12"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
